updated style to stop overlap.

--- a/src/render/css/local.css.styl
+++ b/src/render/css/local.css.styl
@@ -33,7 +33,7 @@ div.qcif.image
     border: none
   .panel-heading
     text-align: left !important
-    margin: 5px 20px 10px 10px
+    margin: 5px 75px 10px 5px
     padding: 0
   .panel-title
     vertical-align: middle !important
@@ -46,10 +46,11 @@ div.qcif.image
       text-decoration: none
   .panel-collapse
     margin: 0
+    overflow-x: show
     .panel-body
       padding-left: 5px
       padding-right: 0
-      margin-right: -50px
+      margin-right: -5px
       margin-left: 0
       width: 8em !important
       border-radius: 4px
